<resources>
    <string name="app_name">latihanActivity</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="tinggi">Tinggi</string>
    <string name="hitung">Hitung</string>
    <string name="hasil">Hasil</string>
    <string name="hintNumberInput">Input angka disini...</string>
    <string name="isiDulu">isi dulu fieldnya yuk</string>
</resources>