<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/panjang" />

    <EditText
        android:id="@+id/length_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hintNumberInput"
        android:hint="@string/hintNumberInput"
        android:inputType="numberDecimal"
        android:lines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lebar" />

    <EditText
        android:id="@+id/width_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hintNumberInput"
        android:hint="@string/hintNumberInput"
        android:inputType="numberDecimal"
        android:lines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinggi" />

    <EditText
        android:id="@+id/height_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hintNumberInput"
        android:hint="@string/hintNumberInput"
        android:inputType="numberDecimal"
        android:lines="1" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hasil"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>